kubernetes/apps/test/secrets/traefik-homepage.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-homepage
    annotations: null
    namespace: traefik
spec:
    entryPoints:
        - websecure
    tls:
        secretName: traefik-dashboard-cert
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:1aN/J1T0hXKxwPRZa3a5gTd2m8idIDPzbHE4O+k++r42,iv:DxiGaWy3zGf+zJOXAhgO564h4zJf3vmMnroEO1YQai4=,tag:tZiGuxF+1KFN+g1vd8/+pA==,type:str]
          services:
            - name: homepage
              kind: Service
              namespace: homepage
              port: 3000
              sticky:
                cookie:
                    httpOnly: true
                    secure: true
                    sameSite: none
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1987m5wdr5t8z9kvhun4sa8nm9ygpt8mrh63mysv7x57fk52xacvqpmnp27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtdjZGYmxZUE9RRmxOSTNN
[...]
            PSrI80VtE7Vky5jLw7B4eXmmCBj2xDQceSqjNihbI65tkDf1sNKH6g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-27T15:38:06Z"
    mac: ENC[AES256_GCM,data:iAIU0xkT2kBDXiaMKjDzmgHVik8MTN1hHx+uVh1IVL2JL82N+ajhfr0wmI1gIZXld44MR+NM2MLSf0JvMcXmGihWVfbdIC+d6rfeV1tqd6ScDoLoh11f4dec/BDyhs81mkPt150I16uefI0a8brusTPcW2IgNdbcyL+KDzySCWE=,iv:DUhaj+g/rVTLjCVF54JSlAxhyQujuxAZAwspsghRwd0=,tag:yaBu4PUgqgLHyEbpBAhjjQ==,type:str]
    pgp: []
    encrypted_regex: ^(user.*|pass.*|.*[Bb]earer.*|.*[Kk]ey|.*[Kk]eys|salt|sentry.*|.*[Tt]oken|data|stringData|match)$
    version: 3.9.0
