kubernetes/apps/test/secrets/traefik-homepage.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: traefik-dashboard
    annotations: null
    namespace: traefik
spec:
    entryPoints:
        - websecure
    tls:
        secretName: traefik-dashboard-cert
    routes:
        - kind: Rule
          match: Host("homepage.test.ghimele.com")
          services:
            - name: homepage
              kind: Service
              port: 3000
              sticky:
                cookie:
                  httpOnly: true
                  secure: true
                  sameSite: none
